Now MatNav toggle works perfect.  But layout issue. Going to fix now.

--- a/vots-web-app/ClientApp/src/app/app.component.css
+++ b/vots-web-app/ClientApp/src/app/app.component.css
@@ -77,7 +77,7 @@ html, body {
 
 .sidenavContainer {
   width: 100%;
-  height: 300px;
+  height: 100%;
 }
 
 .sidenavcontent {
